--- a/src/index.html
+++ b/src/index.html
@@ -155,7 +155,7 @@
 		</div>
 	</div>
 
-	<div class="modal fade"	id="two_room" tabindex="-1" 	aria-labelledby="tworoomLabel" aria-hidden="true">
+	<div class="modal fade" id="two_room" tabindex="-1" aria-labelledby="tworoomLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered justify-content-center">
 			<div class="modal-content modalthink">
 				<button type="button" class="btn-close position-absolute inclos" data-bs-dismiss="modal"
@@ -191,9 +191,9 @@
 			</div>
 		</div>
 	</div>
-	
 
-	<div class="modal fade"	id="three_room" tabindex="-1" aria-labelledby="threeroomLabel" aria-hidden="true">
+
+	<div class="modal fade" id="three_room" tabindex="-1" aria-labelledby="threeroomLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered justify-content-center">
 			<div class="modal-content modalthink">
 				<button type="button" class="btn-close position-absolute inclos" data-bs-dismiss="modal"
@@ -838,16 +838,70 @@
 		</div>
 		</div>
 	</section>
-	<!-- 
+
 	<section class="why">
 		<div class="container">
 			<div class="why__title" id="whyeco">Очевидная выгода</div>
+
+
+			<div id="carouselExampleIndicators" class="carousel slide">
+				<div class="carousel-indicators">
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+				</div>
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<div class="why__wrapper_card green">
+							<div class="why__wrapper_card-title">Платите меньше</div>
+							<div class="why__wrapper_card-subtitle">С «Экоипотекой» итоговая переплата будет в разы меньше, чем при
+								стандартной ставке. И ежемесячный платёж тоже будет меньше, а значит и ваша жизнь становится проще и
+								приятнее. На весь срок ипотеки!
+							</div>
+						</div>
+						<img src="./icons/maneytabl.svg" alt="maneytabl">
+					</div>
+					<div class="carousel-item">
+						<div class="why__wrapper_card blue">
+							<div class="why__wrapper_card-title">Снимайте у себя</div>
+							<div class="why__wrapper_card-subtitle">С Экоипотекой платёж за студию составит от 8 тыс ₽ в месяц. А снимать
+								такую же студию в Краснодаре стоит 10 — 12 тысяч. Выгода очевидна! А с «Экоипотекой» у вас останется своя
+								квартира по окончанию срока.</div>
+						</div>
+						<img src="./icons/Key.svg" alt="key">
+					</div>
+					<div class="carousel-item">
+						<div class="why__wrapper_card orange">
+							<div class="why__wrapper_card-title">Инфляция — за вас!</div>
+							<div class="why__wrapper_card-subtitle">Реальная инфляция в России 15% в год. Оформляя Экоипотеку, вы
+								выплачиваете банку 0,1% в год за использование кредита. Рост цен влияет и на ваш платеж по ипотеке: чем выше
+								цены, тем больше обесценивается ваш ежемесячный платеж. Через несколько лет эта сумма станет еще менее
+								ощутимой для вас.</div>
+						</div>
+						<img src="./icons/laptop.png" alt="laptop">
+					</div>
+					<div class="carousel-item">
+						<div class="why__wrapper_card violet">
+							<div class="why__wrapper_card-title">Выгодное вложение</div>
+							<div class="why__wrapper_card-subtitle">По статистике за последние 3 года квартиры в Краснодаре дорожают на
+								40% в год. Покупая квартиру, вы не только сохраняете деньги, но и зарабатываете на росте цены. А в будущем
+								вы легко и выгодно продадите её, ведь квартиры в районах с развитой инфраструктурой, всегда востребованы.
+							</div>
+						</div>
+						<img src="./icons/safe.svg" alt="save">
+					</div>
+				</div>
+
+			</div>
+
 			<div class="why__wrapper">
 				<div class="why__wrapper_card green">
 					<div class="why__wrapper_card-title">Платите меньше</div>
 					<div class="why__wrapper_card-subtitle">С «Экоипотекой» итоговая переплата будет в разы меньше, чем при
 						стандартной ставке. И ежемесячный платёж тоже будет меньше, а значит и ваша жизнь становится проще и
-						приятнее. На весь срок ипотеки!</div>
+						приятнее. На весь срок ипотеки!
+					</div>
 				</div>
 				<div class="why__wrapper_card blue">
 					<div class="why__wrapper_card-title">Снимайте у себя</div>
@@ -864,18 +918,21 @@
 				</div>
 
 				<div class="why__wrapper_card violet">
-					<img src="./img/super.png" alt="superwoomen" class="why__wrapper_img">
 					<div class="why__wrapper_card-title">Выгодное вложение</div>
 					<div class="why__wrapper_card-subtitle">По статистике за последние 3 года квартиры в Краснодаре дорожают на
 						40% в год. Покупая квартиру, вы не только сохраняете деньги, но и зарабатываете на росте цены. А в будущем
 						вы легко и выгодно продадите её, ведь квартиры в районах с развитой инфраструктурой, всегда востребованы.
 					</div>
 				</div>
+				<div class="why__wrapper_card wooman">
+					<img src="./img/super.png" alt="superwoomen" class="why__wrapper_img">
+				</div>
+
 			</div>
 
 		</div>
 	</section>
-
+	<!-- 
 	<section class="cmc">
 		<div class="container">
 			<div class="impl" id="object">
