--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
 							</div>
 							<button type="submit" class="btn">Отправить</button>
 							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a
-									href="#">персональных данных</a></div>
+									href="./config.html">персональных данных</a></div>
 						</form>
 					</div>
 					<div class="img"><img src="./img/fanny.png" alt="fanny"></div>
@@ -107,7 +107,7 @@
 							</div>
 							<button type="submit" class="btn">Отправить</button>
 							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a
-									href="#">персональных данных</a></div>
+									href="./config.html">персональных данных</a></div>
 						</form>
 					</div>
 					<div class="think">
@@ -144,7 +144,7 @@
 							</div>
 							<button type="submit" class="btn">Отправить</button>
 							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a
-									href="#">персональных данных</a></div>
+									href="./config.html">персональных данных</a></div>
 						</form>
 					</div>
 					<div class="think">
@@ -181,7 +181,7 @@
 							</div>
 							<button type="submit" class="btn">Отправить</button>
 							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a
-									href="#">персональных данных</a></div>
+									href="./config.html">персональных данных</a></div>
 						</form>
 					</div>
 					<div class="think">
@@ -219,7 +219,7 @@
 							</div>
 							<button type="submit" class="btn">Отправить</button>
 							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a
-									href="#">персональных данных</a></div>
+									href="./config.html">персональных данных</a></div>
 						</form>
 					</div>
 					<div class="think">
@@ -1120,7 +1120,7 @@
 				</div>
 			
 			</nav>
-			<div class="confid"><a href="#">Политика конфиденциальности</a></div>
+			<div class="confid"><a href="./config.html">Политика конфиденциальности</a></div>
 		</div>
 	</section> 
 
